mdv - fix issue on smaller phone screens where links were illegible

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,8 @@ body {
 .header__links {
   font-size: 2rem;
   font-weight: 500;
-  margin-top: 2rem; }
+  margin-top: 2rem;
+  margin-bottom: 2rem; }
   .header__links > a {
     color: #f5f8ff;
     text-decoration: none;
@@ -121,7 +122,7 @@ body {
     width: calc( 3 * ((100% - 3* 6rem) / 4) +  2 * 6rem); }
 
 .header {
-  height: 85vh;
+  height: 100%;
   background-image: linear-gradient(to top left, #2A5298, #008DC8, #00C6D5, #6FFACB);
   background-size: cover;
   background-position: bottom;
@@ -130,11 +131,13 @@ body {
   border-radius: 2px; }
   @media (max-width: 38.5em) {
     .header {
-      height: 65vh; } }
+      height: 100%; } }
   .header__text-box {
     margin-top: 2rem;
     box-sizing: border-box;
     text-align: center; }
+  .header__header-links {
+    margin-bottom: 10px; }
   .header__image-box {
     box-sizing: border-box;
     margin: 0 auto;
